# HarmonyDemo

./: README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5  readme.txt  readme_agc.txt  readme_ohpm.txt
AppScope/: app.json5
atomicservicedemo/: .gitignore  build-profile.json5
atomicservicedemo/AppScope/: app.json5
atomicservicedemo/AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/default/: MyConfig.ets
entry/src/main/: module.json5
entry/src/main/ets/: MyAbilityStage.ets
entry/src/target1/: MyConfig.ets
entry/src/target2/: MyConfig.ets
entry/src/test/: List.test.ets  UnitTest.test.ets
feature1/src/main/: module.json5
feature1/src/ohosTest/: module.json5
har1/: Index.ets  oh-package.json5
har1/src/main/: module.json5
har2/: Index.ets  oh-package.json5
har2/src/main/: module.json5
harmonydemo2/AppScope/: app.json5
harmonydemo2/entry/src/main/: module.json5
hsp1/: Index.ets  build-profile.json5  oh-package.json5
hsp1/src/main/: module.json5
hsp1/src/test/: List.test.ets
hsp2/: Index.ets  oh-package.json5
hsp2/src/main/: module.json5
huaweilogindemo/: build-profile.json5
huaweilogindemo/AppScope/: app.json5
huaweilogindemo/entry/src/main/: module.json5
ndk1/: build-profile.json5  oh-package-lock.json5  oh-package.json5
ndk1/src/main/: module.json5
ndk1/src/main/cpp/: CMakeLists.txt  napi_init.cpp
ndk1/src/main/cpp/types/libndk1/: Index.d.ts  oh-package.json5
webapi/: main.py
webapi/webapi/: webserver.py
(+397 files in other folders)
